# Visao-Computacional

./: README.md  main.py  pyproject.toml
src/: leitura_conversao.py
src/visao_computacional/: leitura_conversao.py
