[project]
name = "visao-computacional"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "visao_computacional", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
